add: authentication with clerk

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://neondb_owner:79YAnSOEJWwI@ep-lively-fire-a5rj4c2x.us-east-2.aws.neon.tech/neondb?sslmode=require"
+
+#Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bW9yYWwtbWF5Zmx5LTMxLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_Kdn5kMxggcxMIWK5LL35jKSkqdpCDysa8LtWNpqej1
