--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://neondb_owner:79YAnSOEJWwI@ep-lively-fire-a5rj4c2x.us-east-2.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/finance-ai"
 
-#Clerk
+# Clerk
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bW9yYWwtbWF5Zmx5LTMxLmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_Kdn5kMxggcxMIWK5LL35jKSkqdpCDysa8LtWNpqej1
